--- a/reactapp/index.html
+++ b/reactapp/index.html
@@ -7,6 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
+      <div id="toast-container" style="position: fixed; top: 50px; right: 20px; z-index: 1000;"></div>
       <div id="root" class="container-fluid"></div>
       <div id="modal"></div>
 
